Refactor constraints stuff out of `entropy-shared` to `constraints/ec-core` (#325)
* WIP refactor

* again

* update constraints-core version

* taplo

* update

* asdf

* clippy

* fdsa

* updated stuff

* updated file names

* more

* taplo

* updated constraints version

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -39,8 +39,8 @@ entropy-shared={ path="../shared" }
 kvdb          ={ path="../kvdb", default-features=false }
 
 # Constraints
-entropy-constraints={ path="../constraints" }
-ethers-core        ="0.13.0"
+ec-constraints={ git="https://github.com/entropyxyz/constraints", default-features=false }
+ethers-core   ="0.13.0"
 
 # Logging
 log               ="0.4.17"                                          # todo: remove, overlaps tracing
