--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -43,6 +43,11 @@ commands:
             - run: rustup target add wasm32-unknown-unknown --toolchain nightly-2022-11-16-x86_64-unknown-linux-gnu
     install-dependencies-and-checkout:
         steps:
+            # Needed to getch the currently private `cggmp21` dependency
+            # (this is its deploy key added to CircleCI)
+            - add_ssh_keys:
+                fingerprints:
+                    - "ba:7e:d1:60:52:9d:52:6f:f9:1b:b0:14:72:8a:bf:b8"
             - install-dependencies
             - checkout
             - install-dependencies
