--- a/crypto/kvdb/Cargo.toml
+++ b/crypto/kvdb/Cargo.toml
@@ -17,7 +17,7 @@ zeroize         ={ version="1.4", features=["zeroize_derive"], default-features=
 rpassword       ={ version="5.0", default-features=false }
 scrypt          ={ version="0.8", default-features=false, features=["std"] }
 chacha20poly1305={ version="0.9", features=["alloc"], default-features=false }
-cggmp21         ={ git="ssh://git@github.com/entropyxyz/cggmp21.git", branch="master" }
+cggmp21         ={ git="ssh://git@github.com/entropyxyz/cggmp21.git", tag="v0.0.1" }
 
 # Async
 tokio  ={ version="1.16", features=["macros", "sync", "fs", "rt-multi-thread", "io-util"] }
