--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -43,7 +43,7 @@ commands:
             - run: rustup target add wasm32-unknown-unknown --toolchain nightly-2022-11-16-x86_64-unknown-linux-gnu
     install-dependencies-and-checkout:
         steps:
-            # Needed to getch the currently private `cggmp21` dependency
+            # Needed to getch the currently private `synedrion` dependency
             # (this is its deploy key added to CircleCI)
             - add_ssh_keys:
                 fingerprints:
