--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -40,8 +40,8 @@ entropy-shared={ path="../shared" }
 kvdb          ={ path="../kvdb", default-features=false }
 
 # Constraints
-ec-constraints={ git="https://github.com/entropyxyz/constraints", branch="v0.1", default-features=false }
-ethers-core   ="0.13.0"
+entropy-constraints={ path="../constraints" }
+ethers-core        ="0.13.0"
 
 # Logging
 log               ="0.4.17"                                          # todo: remove, overlaps tracing
