Add validation to sig protocol (#341)
* add sig verification to sig protocol

* clean

* add signature to broadcast

* add public key with message

* add in proper error

* metadata error

* proper metadata

* readme

* tests for validate

* clean

* lint

* lint

---------

Co-authored-by: jesse <jesse@entropy.wxy>

--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -16,3 +16,4 @@ which             ="4.0.2"
 parity-scale-codec="3.0.0"
 lazy_static       ="1.4.0"
 hex-literal       ="0.3.4"
+entropy-shared    ={ path="../shared" }
