--- a/crypto/shared/Cargo.toml
+++ b/crypto/shared/Cargo.toml
@@ -15,6 +15,7 @@ node-primitives={ version="2.0.0", default-features=false, git='https://github.c
 
 # Entropy Constraints packages
 ec-core={ git="https://github.com/entropyxyz/constraints", branch="v0.1", default-features=false }
+schemars = "0.8.12"
 
 [features]
 default=["std"]
