--- a/crypto/shared/Cargo.toml
+++ b/crypto/shared/Cargo.toml
@@ -12,7 +12,7 @@ sp-core        ={ package="sp-core", git="https://github.com/paritytech/substrat
 sp-std         ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31", default-features=false }
 frame-support  ={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31", default-features=false }
 node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-schemars       ="0.8.12"
+schemars       ={ version="0.8.12", optional=true }
 
 # Entropy Constraints packages
 ec-core={ git="https://github.com/entropyxyz/constraints", branch="v0.1", default-features=false }
@@ -20,3 +20,4 @@ ec-core={ git="https://github.com/entropyxyz/constraints", branch="v0.1", defaul
 [features]
 default=["std"]
 std    =["codec/std", "scale-info/std", "serde/std", "sp-core/std", "frame-support/std", "sp-std/std"]
+schema =["dep:schemars"]
