--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -45,9 +45,10 @@ entropy-constraints={ path="../constraints" }
 ethers-core        ="0.13.0"
 
 # Logging
-log               ="0.4.17"                                          # todo: remove, overlaps tracing
-tracing           ="0.1"
-tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
+log               ="0.4.17"                                              # todo: remove, overlaps tracing
+tracing           ="0.1.37"
+tracing-subscriber={ version="0.3.16", features=["env-filter", "json"] }
+tower-http        ={ version="0.3.4", features=["trace"] }
 
 # Misc
 bip39          ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
@@ -57,7 +58,7 @@ base64         ="0.13.0"
 clap           ={ version="4.0.29", features=["derive"] }
 node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
 num            ="0.4.0"
-async-stream = "0.3.5"
+async-stream   ="0.3.5"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
