--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -48,7 +48,7 @@ ethers-core        ="0.13.0"
 log               ="0.4.17"                                              # todo: remove, overlaps tracing
 tracing           ="0.1.37"
 tracing-subscriber={ version="0.3.16", features=["env-filter", "json"] }
-tower-http        ={ version="0.3.4", features=["trace"] }
+tower-http        ={ version="0.3.4", features=["trace", "cors"] }
 
 # Misc
 bip39          ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
