--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -62,6 +62,7 @@ testing-utils={ path="../testing-utils" }
 serial_test  ="0.8.0"
 hex-literal  ="0.3.4"
 project-root ="0.2.2"
+sp-keyring   ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31" }
 
 [features]
 default=['std']
