--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -27,7 +27,7 @@ tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"
 
 # HTTP
 reqwest    ={ version="0.11", features=["json", "stream"] }
-axum       ="0.6.18"
+axum       ={ version="0.6.18", features=["ws"] }
 axum-macros="0.3.7"
 # Substrate
 subxt             ={ package="subxt", git="https://github.com/entropyxyz/subxt.git", branch="polkadot-v0.9.31" }
@@ -58,6 +58,7 @@ clap           ={ version="4.0.29", features=["derive"] }
 node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
 num            ="0.4.0"
 async-stream   ="0.3.5"
+tokio-tungstenite = "0.19.0"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
