--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -68,6 +68,7 @@ pallet-elections-phragmen={ version="5.0.0-dev", default-features=false, git='ht
 pallet-grandpa={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-im-online={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-indices={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+pallet-insecure-randomness-collective-flip={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-identity={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-lottery={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-membership={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
@@ -106,8 +107,9 @@ pallet-staking-extension={ version='3.0.0-monthly-2021-10', default-features=fal
 pallet-transaction-pause={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/transaction-pause' }
 pallet-free-tx          ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/free-tx' }
 entropy-shared          ={ path="../crypto/shared", default-features=false }
+
 [build-dependencies]
-substrate-wasm-builder={ version="5.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+substrate-wasm-builder={ version="5.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43", optional = true }
 
 [features]
 default=["std"]
@@ -181,10 +183,12 @@ std=[
   "pallet-society/std",
   "pallet-recovery/std",
   "pallet-vesting/std",
+   "pallet-insecure-randomness-collective-flip/std",
   "log/std",
   "frame-try-runtime/std",
   "sp-npos-elections/std",
   "sp-io/std",
+   "substrate-wasm-builder",
 ]
 runtime-benchmarks=[
   "frame-benchmarking/runtime-benchmarks",
