--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -57,6 +57,7 @@ base64           ="0.13.0"
 clap             ={ version="4.0.29", features=["derive"] }
 num              ="0.4.0"
 async-stream     ="0.3.5"
+snow             ="0.9.2"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
