--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -28,6 +28,7 @@ frame-election-provider-support={ version="4.0.0-dev", default-features=false, g
 pallet-staking-extension       ={ version="3.0.0", default-features=false, path="../staking" }
 pallet-relayer                 ={ version="3.0.0", default-features=false, path="../relayer" }
 pallet-authorship              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-tracing                     ={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
 [features]
 default=["std"]
