--- a/crypto/shared/Cargo.toml
+++ b/crypto/shared/Cargo.toml
@@ -8,10 +8,9 @@ codec        ={ package="parity-scale-codec", version="3.0.0", default-features=
 scale-info   ={ version='2.0.1', default-features=false, features=['derive'] }
 serde        ={ version="1.0", default-features=false, features=["derive"] }
 serde_derive ="1.0.147"
-sp-core      ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
 sp-std       ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
 frame-support={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
 
 [features]
 default=["std"]
-std    =["codec/std", "scale-info/std", "serde/std", "sp-core/std", "frame-support/std", "sp-std/std"]
+std    =["codec/std", "scale-info/std", "serde/std", "frame-support/std", "sp-std/std"]
