--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -6,10 +6,10 @@ edition="2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-subxt             ={ git="https://github.com/entropyxyz/subxt.git", branch="polkadot-v0.9.31" }
-sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31" }
+subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0" }
+sp-keyring        ="24.0.0"
 project-root      ="0.2.2"
-sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31" }
+sp-core           ={ version="21.0.0", default-features=false }
 env_logger        ="0.9.0"
 log               ="0.4.14"
 which             ="4.0.2"
