--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -19,60 +19,71 @@ name='entropy'
 [dependencies]
 jsonrpc-core                      ='18.0.0'
 serde_json                        ='1.0.0'
-clap                              ={ version="4.0.9", features=["derive"] }
+log                               ="0.4.17"
+clap                              ={ version="4.0.9", features=["derive"], optional=true }
 codec                             ={ package="parity-scale-codec", version="3.0.0" }
 structopt                         ='0.3.8'
-grandpa-primitives                ={ version="4.0.0-dev", package="sp-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+grandpa-primitives                ={ version="4.0.0-dev", package="sp-consensus-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 hex-literal                       ="0.3.1"
-pallet-im-online                  ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-chain-spec                     ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+pallet-im-online                  ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-chain-spec                     ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 serde                             ={ version="1.0.126", features=["derive"] }
-sp-authority-discovery            ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sp-consensus-babe                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-node-primitives                   ={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+sp-authority-discovery            ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-consensus-babe                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+node-primitives                   ={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 rand                              ="0.7.2"
-sc-sync-state-rpc                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+sc-sync-state-rpc                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 futures                           ="0.3.16"
-sc-consensus-babe                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-network                        ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-network-common                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-consensus-slots                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sp-transaction-storage-proof      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-authority-discovery            ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sp-authorship                     ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-consensus-uncles               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-consensus-babe-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-consensus-epochs               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-finality-grandpa               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-finality-grandpa-rpc           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sp-keystore                       ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-jsonrpsee                         ={ version="0.15.1", features=["server"] }
-sp-inherents                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sp-keyring                        ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-frame-system                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-frame-system-rpc-runtime-api      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-pallet-transaction-payment        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+sc-consensus-babe                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-network                        ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-network-common                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-consensus-slots                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+grandpa                           ={ version="0.10.0-dev", package="sc-consensus-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-consensus-grandpa-rpc          ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-statement-store                ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-transaction-storage-proof      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-authority-discovery            ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-consensus-babe-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-consensus-epochs               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-keystore                       ={ version="0.13.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+jsonrpsee                         ={ version="0.16.2", features=["server"] }
+sp-inherents                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-keyring                        ={ version="7.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+frame-system                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+frame-system-rpc-runtime-api      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+pallet-transaction-payment        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-staking-extension          ={ version="3.0.0", path="../../pallets/staking" }
 pallet-free-tx                    ={ version="3.0.0-monthly-2021-10", path="../../pallets/free-tx" }
-node-inspect                      ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-sysinfo                        ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+node-inspect                      ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-sysinfo                        ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-cli                            ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43", optional=true }
+kitchensink-runtime               ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+node-rpc                          ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+node-executor                     ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-network-sync                   ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-network-statement              ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-storage-monitor                ={ version="0.1.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+pallet-asset-tx-payment           ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-statement-store                ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
 [build-dependencies]
+clap                        ={ version="4.2.5", optional=true }
 clap_complete               ={ version="3.0", optional=true }
-node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-substrate-build-script-utils={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-try-runtime-cli             ={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-sc-cli                      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
-pallet-balances             ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+substrate-build-script-utils={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43", optional=true }
+substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+try-runtime-cli             ={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sc-cli                      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43", optional=true }
+pallet-balances             ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
-sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
 [dev-dependencies]
-sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
+sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 tempfile       ="3.1.0"
+sp-tracing     ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
 [dependencies.entropy-runtime]
 path   ='../../runtime'
@@ -80,136 +91,142 @@ version='3.0.0-monthly-2021-10'
 
 [dependencies.frame-benchmarking]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.frame-benchmarking-cli]
-git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
-version='4.0.0-dev'
+git     ='https://github.com/paritytech/substrate.git'
+branch  ="polkadot-v0.9.43"
+version ='4.0.0-dev'
+optional=true
 
 [dependencies.pallet-transaction-payment-rpc]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sc-basic-authorship]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='0.10.0-dev'
-
-[dependencies.sc-cli]
-features=['wasmtime']
-git     ='https://github.com/paritytech/substrate.git'
-branch  ="polkadot-v0.9.31"
-version ='0.10.0-dev'
 
 [dependencies.sc-client-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sc-consensus]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='0.10.0-dev'
 
 [dependencies.sc-consensus-aura]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='0.10.0-dev'
 
 [dependencies.sc-executor]
-features=['wasmtime']
-git     ='https://github.com/paritytech/substrate.git'
-branch  ="polkadot-v0.9.31"
-version ='0.10.0-dev'
+git    ='https://github.com/paritytech/substrate.git'
+branch ="polkadot-v0.9.43"
+version='0.10.0-dev'
 
 [dependencies.sc-keystore]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sc-rpc]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sc-rpc-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='0.10.0-dev'
 
 [dependencies.sc-service]
-features=['wasmtime']
-git     ='https://github.com/paritytech/substrate.git'
-branch  ="polkadot-v0.9.31"
-version ='0.10.0-dev'
+git    ='https://github.com/paritytech/substrate.git'
+branch ="polkadot-v0.9.43"
+version='0.10.0-dev'
 
 [dependencies.sc-telemetry]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sc-transaction-pool]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sc-transaction-pool-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sp-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sp-block-builder]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sp-blockchain]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.sp-consensus]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='0.10.0-dev'
 
 [dependencies.sp-consensus-aura]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='0.10.0-dev'
 
 [dependencies.sp-core]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
-version='6.0.0'
+branch ="polkadot-v0.9.43"
+version='7.0.0'
 
 [dependencies.sp-runtime]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
-version='6.0.0'
+branch ="polkadot-v0.9.43"
+version='7.0.0'
 
 [dependencies.sp-timestamp]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [dependencies.substrate-frame-rpc-system]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="polkadot-v0.9.31"
+branch ="polkadot-v0.9.43"
 version='4.0.0-dev'
 
 [features]
-default=[]
+default=["cli"]
+cli=[
+  "node-inspect",
+  "sc-cli",
+  "frame-benchmarking-cli",
+  "substrate-frame-cli",
+  "sc-service/rocksdb",
+  "clap",
+  "clap_complete",
+  "substrate-build-script-utils",
+  "try-runtime-cli",
+]
 runtime-benchmarks=[
-  'entropy-runtime/runtime-benchmarks',
-  "frame-benchmarking/runtime-benchmarks",
+  "kitchensink-runtime/runtime-benchmarks",
   "frame-benchmarking-cli/runtime-benchmarks",
 ]
+# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
+# in the near future.
+try-runtime=["kitchensink-runtime/try-runtime", "try-runtime-cli/try-runtime"]
