--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -57,6 +57,8 @@ base64           ="0.13.0"
 clap             ={ version="4.0.29", features=["derive"] }
 num              ="0.4.0"
 async-stream     ="0.3.5"
+utoipa           ={ version="3.4.3", features=["axum_extras"] }
+utoipa-swagger-ui={ version="3.1.4", features=["axum"] }
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
