--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -19,7 +19,7 @@ hex                ="*"
 reqwest-eventsource="0.4"
 serde_derive       ="1.0.147"
 
-synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.6" }
+synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
 
 # Async
 futures="0.3"
@@ -65,6 +65,7 @@ serial_test  ="0.8.0"
 hex-literal  ="0.3.4"
 project-root ="0.2.2"
 sp-keyring   ="24.0.0"
+more-asserts ="0.3.1"
 
 [features]
 default=['std']
