--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -8,7 +8,7 @@ edition="2021"
 serde              ={ version="1.0", default-features=false, features=["derive"] }
 serde_json         ="1.0"
 anyhow             ="1.0.53"
-thiserror          ="1.0.40"
+thiserror          ="1.0.47"
 blake2             ="0.10.4"
 x25519-dalek       ="2.0.0-pre.1"
 chacha20poly1305   ="0.10.1"
@@ -40,7 +40,8 @@ kvdb          ={ path="../kvdb", default-features=false }
 
 # Constraints
 entropy-constraints={ path="../constraints" }
-ethers-core        ="2.0.7"
+ec-runtime ={ git = "ssh://git@github.com/entropyxyz/constraints.git" }
+# ethers-core        ="2.0.7"
 
 # Logging
 log               ="0.4.17"                                              # todo: remove, overlaps tracing
@@ -58,6 +59,7 @@ clap             ={ version="4.0.29", features=["derive"] }
 num              ="0.4.0"
 async-stream     ="0.3.5"
 snow             ="0.9.2"
+sha3 = "0.10.8"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
@@ -66,6 +68,7 @@ hex-literal  ="0.3.4"
 project-root ="0.2.2"
 sp-keyring   ="24.0.0"
 more-asserts ="0.3.1"
+template-barebones = { git="https://github.com/entropyxyz/constraints" }
 
 [features]
 default=['std']
