--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -58,6 +58,7 @@ clap             ={ version="4.0.29", features=["derive"] }
 num              ="0.4.0"
 async-stream     ="0.3.5"
 snow             ="0.9.2"
+async-trait      ="0.1.73"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
