--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -6,6 +6,8 @@ edition    ="2021"
 license    ="AGPL-3.0-or-later"
 
 [dependencies]
+async-trait        ="0.1.73"
+serde_json         ="1.0"
 entropy-shared     ={ path="../shared" }
 synedrion          ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
 serde              ={ version="1.0", features=["derive"] }
@@ -16,6 +18,7 @@ x25519-dalek       ="2.0.0-pre.1"
 futures            ="0.3"
 entropy-constraints={ path="../constraints" }
 hex                ="*"
+blake2             ="0.10.4"
 thiserror          ="1.0.40"
 snow               ="0.9.2"
 rand_core          ="0.6.4"
