--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -21,5 +21,11 @@ hex                ="*"
 blake2             ="0.10.4"
 thiserror          ="1.0.40"
 snow               ="0.9.2"
+
+axum       ={ version="0.6.18", features=["ws"], optional = true }
+tokio-tungstenite= { version="0.19.0", optional=true}
 rand_core          ="0.6.4"
 # TODO we maybe want default-features = false, features = ["getrandom"]
+
+[features]
+server = ["dep:axum", "dep:tokio-tungstenite"]
