--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -61,6 +61,7 @@ async-stream     ="0.3.5"
 snow             ="0.9.2"
 sha3             ="0.10.8"
 async-trait      ="0.1.73"
+subxt-signer     ="0.31.0"
 
 [dev-dependencies]
 testing-utils     ={ path="../testing-utils" }
