--- a/pallets/constraints/Cargo.toml
+++ b/pallets/constraints/Cargo.toml
@@ -52,7 +52,7 @@ sp-staking    ={ version="4.0.0-dev", default-features=false, git='https://githu
 sp-io         ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
 sp-runtime    ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
 sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
-entropy-shared={ path="../../crypto/shared", default-features=false }
+entropy-shared={ path="../../crypto/shared", default-features=false, features=["wasm-no-std"] }
 
 [dev-dependencies]
 pallet-balances={ version="4.0.0-dev", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
