--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -51,7 +51,7 @@ sp-io                ={ version="7.0.0", default-features=false, git="https://gi
 lite-json            ={ version="0.1", default-features=false }
 sp-runtime           ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
 sp-core              ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
-entropy-shared       ={ path="../../crypto/shared", default-features=false }
+entropy-shared       ={ path="../../crypto/shared", default-features=false, features=["wasm-no-std"] }
 sp-application-crypto={ version="7.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
 [dev-dependencies]
