--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -62,7 +62,7 @@ version         ='7.0.0'
 
 [dependencies]
 
-entropy-shared          ={ path="../../crypto/shared", default-features=false }
+entropy-shared          ={ path="../../crypto/shared", default-features=false, features=["wasm-no-std"] }
 sp-std                  ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
 pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 log                     ={ version="0.4.0", default-features=false }
