Use permissioned-programs branch of ec-runtime

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -41,7 +41,7 @@ entropy-protocol={ path="../protocol", features=["server"] }
 
 # Constraints
 entropy-constraints={ path="../constraints" }
-ec-runtime         ={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.2.0" }
+ec-runtime         ={ git="ssh://git@github.com/entropyxyz/constraints.git", branch="permissioned-programs" }
 
 # Logging
 log               ="0.4.17"                                              # todo: remove, overlaps tracing
