Provide a "local devnet" setup with Docker Compose.

--- a/.dockerignore
+++ b/.dockerignore
@@ -10,7 +10,7 @@
 # Docker and container engine preparation/runtime stuff.
 ###
 .dockerignore
-docker-compose.yml
+docker-compose.yaml
 
 #################################
 # General editor and IDE stuff. #
